# dotfiles-legacy

./: pyproject.toml
.github/workflows/: build.yml
