[project]
authors = [{name = "Amit Kumar", email = "aktech@users.noreply.github.com"}]
dependencies = []
name = "dotfiles"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
dotfiles = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
ansible = ">=13.4.0,<14"
